Thu Aug 22 06:24:54 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (make_clock_result): Extracted from rb_clock_gettime.

Wed Aug 21 22:30:51 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): clock() based CLOCK_PROCESS_CPUTIME_ID
	  emulation implemented.

Wed Aug 21 21:02:37 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_proc_times): Use RB_GC_GUARD to guard objects from GC.

Wed Aug 21 20:33:01 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (get_clk_tck): Extracted from rb_proc_times.
	  (rb_clock_gettime): times() based CLOCK_PROCESS_CPUTIME_ID emulation
	  is implemented.

Wed Aug 21 19:31:48 2013  Tanaka Akira  <akr@fsij.org>

	* process.c: POSIX_GETTIMEOFDAY_CLOCK_REALTIME is renamed to
	  SUS_GETTIMEOFDAY_CLOCK_REALTIME.

Wed Aug 21 19:17:46 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): CLOCK_PROCESS_CPUTIME_ID emulation
	  using getrusage is implemented.

Wed Aug 21 17:34:27 2013  Tanaka Akira  <akr@fsij.org>

	* gc.c (getrusage_time): Fallback clock_gettime to getrusage when
	  clock_gettime fails.
	  Reported by Eric Saxby.  [ruby-core:56762] [Bug #8805]

Wed Aug 21 02:32:32 2013  Koichi Sasada  <ko1@atdot.net>

	* insns.def: fix regexp's once option behavior.
	  fix [ruby-trunk - Bug #6701]

	* insns.def: remove `onceinlinecache' and introduce `once' instruction.
	  `once' doesn't use `setinlinecache' insn any more.

	* vm_core.h: `union iseq_inline_storage_entry' to store once data.

	* compile.c: catch up above changes.

	* iseq.c: ditto.

	* vm.c, vm_insnhelper.c: ditto. fix `m_core_set_postexe()' which
	  is depend on `onceinlinecache' insn.

	* test/ruby/test_regexp.rb: add tests.

	* iseq.c: ISEQ_MINOR_VERSION to 1 (should increment major?)

Wed Aug 21 02:30:15 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_gcdebug_print_obj_condition): add printing information.

Tue Aug 20 13:38:00 2013  Naohisa Goto  <ngotogenome@gmail.com>
